--- a/src/css/index.css
+++ b/src/css/index.css
@@ -50,9 +50,10 @@
 
   --header-background-color: linear-gradient(90deg, rgba(197, 107, 110, 0.95) 17%, rgba(230, 218, 153, 0.95) 88%);;
   --background-color: #dfcd9c;
-  --footer-backgtound-color: #706547;
+  --footer-background-color: linear-gradient(0deg, rgba(121,109,45,0.7903536414565826) 11%, #dfcd9c 88%);
+  ;
   /* --radial: radial-gradient(#968768, #968768, #968768); */
-  --font-white: #000000;
+  --header-font-color: #000000;
   --second-color: #ff9419;
   --darker-second-color: #685e09;
   --pragraph-color: #494949;  
@@ -74,7 +75,7 @@
     1px 1px 15px 0px rgba(60, 255, 1, 0.2);
   --btn-shadow-hover: 1px 1px 30px 0px rgb(89, 255, 39, 0.4),
     1px 1px 30px 0px rgb(60, 255, 1, 0.2); */
-  --border: 1px solid rgba(255, 187, 0, 0.432);
+  --border: 1px solid rgba(255, 255, 255, 0.432);
 }
 
 /*** 
@@ -93,18 +94,18 @@
   display: flex !important;
   justify-content: center !important;
   align-items: center !important;
-  color: rgb(0, 0, 0) !important;
+  color: var(--header-font-color) !important;
   font-size: 20px !important;
   position: relative;
 }
 .MuiOutlinedInput-notchedOutline {
-  border-color: #804900 !important;
+  border-color: var(--border)!important;
 }
 .MuiSvgIcon-root {
-  fill:#804900 !important;
+  fill: var(--border) !important;
 }
 .MuiFormLabel-root {
-  color: #804900 !important;
+  color: var(--border) !important;
 }
 
 .MuiMenu-list {
@@ -1002,10 +1003,6 @@ img {
   background: #13081d;
 }
 
-.footer {
-  background: var(--footer-backgtound-color);
-}
-
 .App {
   text-align: center;
 }
@@ -1517,10 +1514,10 @@ header {
 }
 
 header * {
-  color: var(--font-white) !important;
+  color: var(--header-font-color) !important;
 }
 .tickets a {
-  color: var(--font-white) !important;
+  color: var(--header-font-color) !important;
 }
 .tickets span {
   color: var(--second-color) !important;
@@ -1533,7 +1530,7 @@ footer .wrapper .container img {
 }
 footer {
   border-top: var(--border);
-  background-color: var(--background-color);
+  background: var(--footer-background-color);
   padding: 10px;
 }
 .hero-content p {
@@ -4759,21 +4756,19 @@ p {
 
 /*----- start blog css -----*/
 #ttsmartblog {
-  float: left;
   width: 100%;
+  padding-bottom: 80px;
 }
 @media (max-width: 543px) {
   #ttsmartblog {
     margin: 15px 0;
   }
 }
-#ttsmartblog .container {
-  padding: 0 178px;
-}
 
 #ttsmartblog img {
   width: 400px;
 }
+
 @media (max-width: 1689px) {
   #ttsmartblog .container {
     padding: 0 15px;
@@ -5015,7 +5010,6 @@ p {
   font: 400 14px/16px Poppins, Helvetica, sans-serif;
 }
 
-
 #ttsmartblog.style2 .container {
   padding: 0 15px;
 }
@@ -5066,6 +5060,7 @@ p {
   background-position: center;
   opacity: 0;
   transition: opacity 0.5s ease-in-out;
+  pointer-events: none;
 }
 
 .blog_inner:hover::before {
@@ -5104,4 +5099,217 @@ p {
   top: auto;
   width: 50px;
   border-bottom: 2px solid #000;
+}
+
+/* BUTTONS */
+
+.type--A{
+  --line_color : #555555 ;
+  --back_color : #FFECF6  ;
+}
+
+.button-drawing{
+    position : relative ;
+    z-index : 0 ;
+    width : 240px ;
+    height : 56px ;
+    text-decoration : none ;
+    font-size : 14px ; 
+    font-weight : bold ;
+    color : var(--line_color) ;
+    letter-spacing : 2px ;
+    transition : all .3s ease ;
+    cursor: pointer;
+}
+.button__text{
+    display : flex ;
+    justify-content : center ;
+    align-items : center ;
+    width : 100% ;
+    height : 100% ;
+}
+.button-drawing::before,
+.button-drawing::after,
+.button__text::before,
+.button__text::after{
+    content : '' ;
+    position : absolute ;
+    height : 3px ;
+    border-radius : 2px ;
+    background : var(--line_color) ;
+    transition : all .5s ease ;
+}
+.button-drawing::before{
+    top : 0 ;
+    left : 54px ;
+    width : calc( 100% - 56px * 2 - 16px ) ;
+}
+.button-drawing::after{
+    top : 0 ;
+    right : 54px ;
+    width : 8px ;
+}
+.button__text::before{
+    bottom : 0 ;
+    right : 54px ;
+    width : calc( 100% - 56px * 2 - 16px ) ;
+}
+.button__text::after{
+    bottom : 0 ;
+    left : 54px ;
+    width : 8px ;
+}
+.button__line{
+    position : absolute ;
+    top : 0 ;
+    width : 56px ;
+    height : 100% ;
+    overflow : hidden ;
+}
+.button__line::before{
+    content : '' ;
+    position : absolute ;
+    top : 0 ;
+    width : 150% ;
+    height : 100% ;
+    box-sizing : border-box ;
+    border-radius : 300px ;
+    border : solid 3px var(--line_color) ;
+}
+.button__line:nth-child(1),
+.button__line:nth-child(1)::before{
+    left : 0 ;
+}
+.button__line:nth-child(2),
+.button__line:nth-child(2)::before{
+    right : 0 ;
+}
+.button-drawing:hover{
+    letter-spacing : 6px ;
+}
+.button-drawing:hover::before,
+.button-drawing:hover .button__text::before{
+    width : 8px ;
+}
+.button-drawing:hover::after,
+.button-drawing:hover .button__text::after{
+    width : calc( 100% - 56px * 2 - 16px ) ;
+}
+.button__drow1,
+.button__drow2{
+    position : absolute ;
+    z-index : -1 ;
+    border-radius : 16px ;
+    transform-origin : 16px 16px ;
+}
+.button__drow1{
+    top : -16px ;
+    left : 40px ;
+    width : 32px ;
+    height : 0;
+    transform : rotate( 30deg ) ;
+}
+.button__drow2{
+    top : 44px ;
+    left : 77px ;
+    width : 32px ;
+    height : 0 ;
+    transform : rotate(-127deg ) ;
+}
+.button__drow1::before,
+.button__drow1::after,
+.button__drow2::before,
+.button__drow2::after{
+    content : '' ;
+    position : absolute ;
+}
+.button__drow1::before{
+    bottom : 0 ;
+    left : 0 ;
+    width : 0 ;
+    height : 32px ;
+    border-radius : 16px ;
+    transform-origin : 16px 16px ;
+    transform : rotate( -60deg ) ;
+}
+.button__drow1::after{
+    top : -10px ;
+    left : 45px ;
+    width : 0 ;
+    height : 32px ;
+    border-radius : 16px ;
+    transform-origin : 16px 16px ;
+    transform : rotate( 69deg ) ;
+}
+.button__drow2::before{
+    bottom : 0 ;
+    left : 0 ;
+    width : 0 ;
+    height : 32px ;
+    border-radius : 16px ;
+    transform-origin : 16px 16px ;
+    transform : rotate( -146deg ) ;
+}
+.button__drow2::after{
+    bottom : 26px ;
+    left : -40px ;
+    width : 0 ;
+    height : 32px ;
+    border-radius : 16px ;
+    transform-origin : 16px 16px ;
+    transform : rotate( -262deg ) ;
+}
+.button__drow1,
+.button__drow1::before,
+.button__drow1::after,
+.button__drow2,
+.button__drow2::before,
+.button__drow2::after{
+    background : var( --back_color ) ;
+}
+.button-drawing:hover .button__drow1{
+    animation : drow1 ease-in .06s ;
+    animation-fill-mode : forwards ;
+}
+.button-drawing:hover .button__drow1::before{
+    animation : drow2 linear .08s .06s ;
+    animation-fill-mode : forwards ;
+}
+.button-drawing:hover .button__drow1::after{
+    animation : drow3 linear .03s .14s ;
+    animation-fill-mode : forwards ;
+}
+.button-drawing:hover .button__drow2{
+    animation : drow4 linear .06s .2s ;
+    animation-fill-mode : forwards ;
+}
+.button-drawing:hover .button__drow2::before{
+    animation : drow3 linear .03s .26s ;
+    animation-fill-mode : forwards ;
+}
+.button-drawing:hover .button__drow2::after{
+    animation : drow5 linear .06s .32s ;
+    animation-fill-mode : forwards ;
+}
+@keyframes drow1{
+    0%   { height : 0 ; }
+    100% { height : 100px ; }
+}
+@keyframes drow2{
+    0%   { width : 0 ; opacity : 0 ;}
+    10%  { opacity : 0 ;}
+    11%  { opacity : 1 ;}
+    100% { width : 120px ; }
+}
+@keyframes drow3{
+    0%   { width : 0 ; }
+    100% { width : 80px ; }
+}
+@keyframes drow4{
+    0%   { height : 0 ; }
+    100% { height : 120px ; }
+}
+@keyframes drow5{
+    0%   { width : 0 ; }
+    100% { width : 124px ; }
 }
