--- a/src/css/index.css
+++ b/src/css/index.css
@@ -89,6 +89,10 @@
 ====================================================================
 ***/
 
+.balanceWithdraw {
+  width: 100%;
+}
+
 .fixed-position {
   height: 100%;
   margin: 0;
