--- a/src/css/index.css
+++ b/src/css/index.css
@@ -55,7 +55,7 @@
   
   --button-line_color: #13af79;
   --button-back_color: #9afddf9c;
-  --button-hover-color: #00aeff;
+  --button-hover-color: #008f5d;
   /* --radial: radial-gradient(#968768, #968768, #968768); */
   --header-font-color: #ffffff;
   --font-color: #fff ;
